[project]
name = "html2mp4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">= 3.9, < 3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "html5lib>=1.1",
    "moviepy>=1.0.3",
    "scikit-image>=0.22.0",
    "srt>=3.5.3",
    "tts>=0.22.0",
]
